--- a/secondkill-service/secondkill-user/src/main/resources/application.yml
+++ b/secondkill-service/secondkill-user/src/main/resources/application.yml
@@ -45,7 +45,7 @@ spring:
         server-addr: secondkill-register:8848
 #        namespace: dev
 #        group: user
-#        ip: 127.0.0.1
+        ip: secondkill-register
 
 
   redis:
